--- a/app/src/main/res/layout/activity_novo_produto_empresa.xml
+++ b/app/src/main/res/layout/activity_novo_produto_empresa.xml
@@ -50,7 +50,7 @@
             android:background="@drawable/bg_edit_text"
             android:ems="10"
             android:hint="Preço"
-            android:inputType="text"
+            android:inputType="number|numberDecimal"
             android:padding="16dp" />
 
         <Button
