--- a/app/src/main/res/layout/activity_autenticacao.xml
+++ b/app/src/main/res/layout/activity_autenticacao.xml
@@ -8,7 +8,7 @@
         android:layout_marginBottom="20dp"
         />
     <EditText
-        android:id="@+id/editProdutoNome"
+        android:id="@+id/editUsuarioNome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_edit_text"
@@ -16,7 +16,7 @@
         android:inputType="textEmailAddress"
         android:padding="16dp"/>
     <EditText
-        android:id="@+id/editProdutoDescricao"
+        android:id="@+id/editUsuarioEndereco"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-2dp"
