--- a/app/src/main/res/layout/activity_configuracoes_empresa.xml
+++ b/app/src/main/res/layout/activity_configuracoes_empresa.xml
@@ -30,7 +30,7 @@
             android:src="@drawable/perfil" />
 
         <EditText
-            android:id="@+id/editProdutoNome"
+            android:id="@+id/editUsuarioNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_edit_text"
@@ -40,7 +40,7 @@
             android:padding="16dp" />
 
         <EditText
-            android:id="@+id/editProdutoDescricao"
+            android:id="@+id/editUsuarioEndereco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="-2dp"
@@ -73,7 +73,7 @@
             android:padding="16dp" />
 
         <Button
-            android:id="@+id/buttonAcesso2"
+            android:id="@+id/buttonAcesso4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="validarDadosEmpresa"
