--- a/app/src/main/res/layout/activity_novo_produto_empresa.xml
+++ b/app/src/main/res/layout/activity_novo_produto_empresa.xml
@@ -22,7 +22,7 @@
         >
 
         <EditText
-            android:id="@+id/editProdutoNome"
+            android:id="@+id/editUsuarioNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_edit_text"
@@ -32,7 +32,7 @@
             android:padding="16dp" />
 
         <EditText
-            android:id="@+id/editProdutoDescricao"
+            android:id="@+id/editUsuarioEndereco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="-2dp"
